Fix header alignment

--- a/source/sass/components/header/_casual.scss
+++ b/source/sass/components/header/_casual.scss
@@ -48,10 +48,6 @@
         color: #fff;
     }
 
-    > .container {
-        padding: $content-gutter 0 0 0;
-    }
-
     .navbar-mainmenu {
         padding-top: 0;
     }
